# docstring_parser

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  all-documents.html  apidocs-help.html  apidocs.css  classIndex.html  docstring_parser.Docstring.html  docstring_parser.DocstringDeprecated.html  docstring_parser.DocstringMeta.html  docstring_parser.DocstringParam.html  docstring_parser.DocstringRaises.html  docstring_parser.DocstringReturns.html  docstring_parser.DocstringStyle.html  docstring_parser.ParseError.html  docstring_parser.RenderingStyle.html  docstring_parser.attrdoc.AttributeDocstrings.html  docstring_parser.attrdoc.html  docstring_parser.common.DocstringExample.html  docstring_parser.common.html  docstring_parser.epydoc.html  docstring_parser.google.GoogleParser.html  docstring_parser.google.Section.html  docstring_parser.google.SectionType.html  docstring_parser.google.html  docstring_parser.html  docstring_parser.numpydoc.DeprecationSection.html  docstring_parser.numpydoc.ExamplesSection.html  docstring_parser.numpydoc.NumpydocParser.html  docstring_parser.numpydoc.ParamSection.html  docstring_parser.numpydoc.RaisesSection.html  docstring_parser.numpydoc.ReturnsSection.html  docstring_parser.numpydoc.Section.html  docstring_parser.numpydoc.YieldsSection.html  docstring_parser.numpydoc._KVSection.html  docstring_parser.numpydoc._SphinxSection.html  docstring_parser.numpydoc.html  (+18 more)
.github/: dependabot.yml
.github/workflows/: apidocs.yml  build.yml  ci_test.yml
docstring_parser/: __init__.py  attrdoc.py  common.py  doxygen.py  epydoc.py  google.py  javadoc.py  jsdoc.py  numpydoc.py  parser.py  phpdoc.py  rdoc.py  rest.py  rustdoc.py  styles.py  util.py  xml.py
docstring_parser/parser/: __init__.py  common.py  google.py  numpy.py  rest.py
docstring_parser/tests/: __init__.py  _pydoctor.py  test_epydoc.py  test_google.py  test_numpydoc.py  test_parser.py  test_rest.py  test_util.py
docstring_parser/tests/parser/: test_google.py  test_numpy.py  test_rest.py
