[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "docstring_parser"
version = "0.16"
description = "Parse Python docstrings in reST, Google and Numpydoc format"
authors = ["Marcin Kurczewski <dash@wind.garden>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rr-/docstring_parser"
classifiers = [
    "Environment :: Other Environment",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "docstring_parser" }
]
include = ["docstring_parser/py.typed"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"

[tool.poetry.dev-dependencies]
pre-commit = {version = ">=2.16.0", python = ">=3.9"}
pytest = "*"
pydoctor = ">=22.3.0"

[tool.black]
line-length = 79
py36 = true

[tool.isort]
known_third_party = "docstring_parser"
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.master]
jobs = 4

[tool.pylint.format]
max-line-length = 79

[tool.pylint.messages_control]
reports = "no"
disable = [
    "import-error",
    "duplicate-code",
    "too-many-locals",
    "too-many-lines",
    "too-many-branches",
    "too-many-statements",
    "too-many-arguments",
    "too-few-public-methods",
]
