[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docstring_parser"
version = "0.17.0"
description = "Parse Python docstrings in reST, Google and Numpydoc format"
authors = [
    {name="Marcin Kurczewski", email="dash@wind.garden"},
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Environment :: Other Environment",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/rr-/docstring_parser"
repository = "https://github.com/rr-/docstring_parser"
changelog = "https://github.com/rr-/docstring_parser/blob/master/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "pydoctor >= 25.4.0",
]
dev = [
    "docstring_parser[test]",
    "docstring_parser[docs]",
    "pre-commit >= 2.16.0; python_version>='3.9'",
]

[tool.black]
line-length = 79
py38 = true

[tool.isort]
known_third_party = "docstring_parser"
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.master]
jobs = 4

[tool.pylint.format]
max-line-length = 79

[tool.pylint.messages_control]
reports = "no"
disable = [
    "import-error",
    "duplicate-code",
    "too-many-locals",
    "too-many-lines",
    "too-many-branches",
    "too-many-statements",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-few-public-methods",
]
