[metadata]
name = docstring_parser
version = 0.7.3
url = https://github.com/rr-/docstring_parser
author = Marcin Kurczewski
author_email = rr-@sakuya.pl
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
classifiers =
    Environment :: Other Environment
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Documentation :: Sphinx
    Topic :: Text Processing :: Markup
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = ~=3.5
package_dir = docstring_parser=docstring_parser
packages = find:
