[metadata]
name = docstring_parser
version = 0.8
url = https://github.com/rr-/docstring_parser
author = Marcin Kurczewski
author_email = rr-@sakuya.pl
description = "Parse Python docstrings in reST, Google and Numpydoc format"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
classifiers =
    Environment :: Other Environment
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation :: Sphinx
    Topic :: Text Processing :: Markup
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.5
package_dir = docstring_parser=docstring_parser
packages = find:

[options.package_data]
docstring_parser = py.typed

[tox:tox]
envlist = py{35,36,37,38,39}

[testenv]
deps = pytest
commands = pytest
